# diamond-io

./: .gitignore  Cargo.toml  README.md  build.rs  check_availability.sh  final_bits_norm_n_13_crt_51_depth_12_base_20.json  justfile  memory_analyzer.py  memory_profile.py  memory_profiler.py  monitor_cpu.sh  run.sh
.github/workflows/: benchmark-self-hosted.yml  benchmark.yml  ci-self-hosted.yml  ci.yml
benches/: dcrtmatrix.rs  decompose_benchmark.rs
cli/: Cargo.toml
cli/src/: main.rs
dio/: Cargo.toml  README  dio-config.example.toml  public_circuit.example.json
dio/src/: circuit.rs  config.rs  main.rs
e2e/: README  dio-config.0.toml  dio-config.1-plt.toml  dio-config.1.toml  dio-config.10.toml  dio-config.2.toml  dio-config.21.toml  dio-config.22.toml  dio-config.24.toml  dio-config.27.toml  dio-config.3.toml  dio-config.30.toml  dio-config.33.toml  dio-config.34.toml  dio-config.35.toml  dio-config.36.toml  dio-config.4.toml  dio-config.5.toml  dio-config.6.toml  dio-config.dummy-plt.toml  dio-config.dummy-width.toml  dio-config.dummy.toml  dio-config.middle.toml  dummy.param.toml
e2e/circuits/: public_circuit.middle.json  public_circuit.real.json  (+2 more)
logs/: res3.txt
simulator/: circuit.py  environment.yml  from_compact_bytes.py  main.py
src/: lib.rs  storage.rs  storage_optimized.rs  test_utils.rs  utils.rs
tests/: test_bgg_pubkey.rs  test_io.rs  test_io_dummy_param.rs  test_io_dummy_param_width.rs  test_io_final_circuit.rs  test_io_middle_param.rs  test_io_plt.rs  test_io_real_param.rs  test_preimage_real_params.rs  test_public_lookup.rs
(+98 files in other folders)
