[package]
name = "dio"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
diamond-io = { path = "../" }
num-bigint = { version = "0.4", features = ["serde"] }
rand = { version = "0.9.0", features = ["std_rng"] }
keccak-asm = { version = "0.1.4" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
serde_json = "1.0.48"
